Replaced JNA with FFM